--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Configure git for private modules
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GO_MODULES_TOKEN }}
         run: git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4.0.0
