--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+-rc*" # Push events to matching v*, i.e. v1.0-rc1, v20.15.10-rc5
 env:
   registry: docker.io
-  repository: finschia/finschia-simapp
+  repository: finschia/finschia-l2app
 jobs:
   build:
     runs-on: ubuntu-latest
