--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -320,7 +320,7 @@ jobs:
 #            go.sum
 #      - name: start localnet
 #        run: |
-#          make clean build-simd-linux localnet-start
+#          make clean build-rollupd-linux localnet-start
 #        if: env.GIT_DIFF
 #      - name: test liveness
 #        run: |
@@ -335,4 +335,4 @@ jobs:
 #      - uses: actions/checkout@v3
 #      - name: build docker image
 #        run: |
-#          docker build --pull --rm -f "Dockerfile" -t simapp:latest "."
+#          docker build --pull --rm -f "Dockerfile" -t l2app:latest "."
