--- a/contrib/images/simd-env/Dockerfile
+++ b/contrib/images/simd-env/Dockerfile
@@ -10,11 +10,11 @@ RUN LEDGER_ENABLED=false make clean build
 
 FROM alpine:3.14 AS run
 RUN apk add bash curl jq
-COPY contrib/images/simd-env/wrapper.sh /usr/bin/wrapper.sh
+COPY contrib/images/rollupd-env/wrapper.sh /usr/bin/wrapper.sh
 
-VOLUME /simd
-COPY --from=build /work/build/simd /simd/
-WORKDIR /simd
+VOLUME /rollupd
+COPY --from=build /work/build/rollupd /rollupd/
+WORKDIR /rollupd
 
 EXPOSE 26656 26657
 ENTRYPOINT ["/usr/bin/wrapper.sh"]
